--- a/css/style.css
+++ b/css/style.css
@@ -86,8 +86,11 @@ body {
   content: "";
   position: absolute;
   top: -20px;
-  left: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   right: 0;
+  width: 122px;
   height: 5px;
   background-color: transparent;
   -webkit-transition: background-color 0.3s ease;
@@ -132,6 +135,22 @@ body {
   height: 20px;
   z-index: 60;
 }
+.drawer-icon.is-checked .drawer-icon__bar {
+  background: #fff;
+}
+.drawer-icon.is-checked .drawer-icon__bar:nth-child(1) {
+  top: 10px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.drawer-icon.is-checked .drawer-icon__bar:nth-child(2) {
+  display: none;
+}
+.drawer-icon.is-checked .drawer-icon__bar:nth-child(3) {
+  top: 10px;
+  -webkit-transform: rotate(-135deg);
+          transform: rotate(-135deg);
+}
 
 .drawer-icon__bar {
   position: absolute;
@@ -141,6 +160,10 @@ body {
   height: 3px;
   border-radius: 6px;
   background: #2082e0;
+  -webkit-transition: -webkit-transform 0.3s linear;
+  transition: -webkit-transform 0.3s linear;
+  transition: transform 0.3s linear;
+  transition: transform 0.3s linear, -webkit-transform 0.3s linear;
 }
 .drawer-icon__bar:nth-child(2) {
   top: 10px;
@@ -150,7 +173,6 @@ body {
 }
 
 .drawer-content {
-  display: none;
   width: 428px;
   height: 100%;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(34, 142, 221, 0.9)), to(rgba(43, 198, 201, 0.9)));
@@ -161,6 +183,16 @@ body {
   z-index: 50;
   text-align: center;
   padding-top: 130px;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 0.7s;
+  transition: -webkit-transform 0.7s;
+  transition: transform 0.7s;
+  transition: transform 0.7s, -webkit-transform 0.7s;
+}
+.drawer-content.is-checked {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .drawer-content__logo img {
