--- a/sass/style.scss
+++ b/sass/style.scss
@@ -92,8 +92,10 @@ body {
     content: "";
     position: absolute;
     top: -20px;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     right: 0;
+    width: 122px;
     height: 5px;
     background-color: transparent;
     transition: background-color 0.3s ease;
@@ -135,6 +137,23 @@ body {
   width: 40px;
   height: 20px;
   z-index: 60;
+
+  &.is-checked {
+    .drawer-icon__bar {
+      background: #fff;
+      &:nth-child(1) {
+        top: 10px;
+        transform: rotate(-45deg);
+      }
+      &:nth-child(2) {
+        display: none;
+      }
+      &:nth-child(3) {
+        top: 10px;
+        transform: rotate(-135deg);
+      }
+    }
+  }
 }
 
 .drawer-icon__bar {
@@ -145,6 +164,7 @@ body {
   height: 3px;
   border-radius: 6px;
   background: #2082e0;
+  transition: transform 0.3s linear;
 
   &:nth-child(2) {
     top: 10px;
@@ -155,7 +175,6 @@ body {
 }
 
 .drawer-content {
-  display: none;
   width: 428px;
   height: 100%;
   background: linear-gradient(
@@ -169,6 +188,12 @@ body {
   z-index: 50;
   text-align: center;
   padding-top: 130px;
+  transform: translateX(100%);
+  transition: transform 0.7s;
+
+  &.is-checked {
+    transform: translateX(0);
+  }
 }
 
 .drawer-content__logo {
