--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,23 @@
-@charset "UTF-8";
+.button {
+  display: inline-block;
+  padding: 9px 54px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  border-radius: 48px;
+  background: -webkit-gradient(linear, left top, right top, color-stop(1.75%, #2188de), color-stop(97.75%, #2bcbc6));
+  background: linear-gradient(90deg, #2188de 1.75%, #2bcbc6 97.75%);
+  -webkit-box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+          box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+  color: #f6f7f7;
+  font-weight: 700;
+  letter-spacing: 3px;
+}
+
 body {
   font-size: 16px;
   color: #333;
@@ -9,7 +28,7 @@ body {
 }
 
 /*****************************************
-// ヘッダー
+// header
 ******************************************/
 .header__inner {
   display: -webkit-box;
@@ -100,26 +119,6 @@ body {
   background-color: #3f51b5;
 }
 
-.nav__button {
-  display: inline-block;
-  padding: 9px 54px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 10px;
-  border-radius: 48px;
-  background: -webkit-gradient(linear, left top, right top, color-stop(1.75%, #2188de), color-stop(97.75%, #2bcbc6));
-  background: linear-gradient(90deg, #2188de 1.75%, #2bcbc6 97.75%);
-  -webkit-box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
-          box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
-  color: #f6f7f7;
-  font-weight: 700;
-  letter-spacing: 3px;
-}
-
 @media (width >= 1025px) {
   .header__open {
     display: none;
@@ -127,7 +126,7 @@ body {
 }
 
 /*****************************************
-// SPドロワー
+// drawer
 ******************************************/
 .drawer-icon {
   position: relative;
@@ -173,7 +172,7 @@ body {
 }
 
 .drawer-content {
-  width: 428px;
+  width: 100%;
   height: 100%;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(34, 142, 221, 0.9)), to(rgba(43, 198, 201, 0.9)));
   background: linear-gradient(180deg, rgba(34, 142, 221, 0.9) 0%, rgba(43, 198, 201, 0.9) 100%);
@@ -215,4 +214,83 @@ body {
   color: #fff;
   font-size: 20px;
   font-weight: 700;
+}
+
+/*****************************************
+// fv
+******************************************/
+.fv {
+  text-align: center;
+  padding-bottom: 80px;
+}
+
+.fv__inner {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (width >= 1025px) {
+  .fv__inner {
+    max-width: 1150px;
+    margin-left: auto;
+    margin-right: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.fv__image img {
+  width: 398px;
+}
+@media (width >= 1025px) {
+  .fv__image img {
+    width: 650px;
+  }
+}
+
+.fv__content {
+  margin-top: 40px;
+}
+@media (width >= 1025px) {
+  .fv__content {
+    -moz-text-align-last: left;
+         text-align-last: left;
+  }
+}
+
+.fv__logo img {
+  width: 250px;
+}
+
+.fv__title {
+  margin-top: 20px;
+  color: #2b2b2b;
+  font-size: 20px;
+  font-weight: 700;
+}
+@media (width >= 1025px) {
+  .fv__title {
+    margin-top: 24px;
+    font-size: 26px;
+  }
+}
+
+.fv__text {
+  margin-top: 20px;
+  font-weight: 400;
+  line-height: 2;
+}
+
+.fv__button {
+  margin-top: 30px;
 }
