--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,6 +25,20 @@ $breakpoints: (
 // inner
 $width-inner: 1200px;
 
+.button {
+  display: inline-block;
+  padding: 9px 54px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 48px;
+  background: linear-gradient(90deg, #2188de 1.75%, #2bcbc6 97.75%);
+  box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+  color: #f6f7f7;
+  font-weight: 700;
+  letter-spacing: 3px;
+}
+
 body {
   font-size: $font-size-base;
   color: $color-base;
@@ -34,7 +48,7 @@ body {
 }
 
 /*****************************************
-// ヘッダー
+// header
 ******************************************/
 .header {
 }
@@ -110,17 +124,6 @@ body {
 }
 
 .nav__button {
-  display: inline-block;
-  padding: 9px 54px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  border-radius: 48px;
-  background: linear-gradient(90deg, #2188de 1.75%, #2bcbc6 97.75%);
-  box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
-  color: #f6f7f7;
-  font-weight: 700;
-  letter-spacing: 3px;
 }
 
 .header__open {
@@ -130,7 +133,7 @@ body {
 }
 
 /*****************************************
-// SPドロワー
+// drawer
 ******************************************/
 .drawer-icon {
   position: relative;
@@ -175,7 +178,7 @@ body {
 }
 
 .drawer-content {
-  width: 428px;
+  width: 100%;
   height: 100%;
   background: linear-gradient(
     180deg,
@@ -213,4 +216,73 @@ body {
   color: #fff;
   font-size: 20px;
   font-weight: 700;
+}
+
+/*****************************************
+// fv
+******************************************/
+.fv {
+  text-align: center;
+  padding-bottom: 80px;
+}
+
+.fv__inner {
+  padding-left: 15px;
+  padding-right: 15px;
+
+  @include mq(pc) {
+    max-width: calc(1120px + 15px * 2);
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+.fv__image {
+  img {
+    width: 398px;
+
+    @include mq(pc) {
+      width: 650px;
+    }
+  }
+}
+
+.fv__content {
+  margin-top: 40px;
+
+  @include mq(pc) {
+    text-align-last: left;
+  }
+}
+
+.fv__logo {
+  img {
+    width: 250px;
+  }
+}
+
+.fv__title {
+  margin-top: 20px;
+  color: #2b2b2b;
+  font-size: 20px;
+  font-weight: 700;
+
+  @include mq(pc) {
+    margin-top: 24px;
+    font-size: 26px;
+  }
+}
+
+.fv__text {
+  margin-top: 20px;
+  font-weight: 400;
+  line-height: 2;
+}
+
+.fv__button {
+  margin-top: 30px;
 }
