--- a/css/style.css
+++ b/css/style.css
@@ -42,21 +42,16 @@ body {
           align-items: center;
   padding: 24px 15px 44px;
 }
-@media (width >= 429px) and (width <= 1024px) {
+@media (width >= 768px) and (width <= 1279px) {
   .header__inner {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 24px 15px 44px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px;
   }
 }
-@media (width >= 1025px) {
+@media (width >= 1280px) {
   .header__inner {
     max-width: 1230px;
     margin-left: auto;
@@ -72,12 +67,12 @@ body {
 .header__nav {
   display: none;
 }
-@media (width >= 429px) and (width <= 1024px) {
+@media (width >= 768px) and (width <= 1279px) {
   .header__nav {
-    display: none;
+    display: block;
   }
 }
-@media (width >= 1025px) {
+@media (width >= 1280px) {
   .header__nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -119,7 +114,18 @@ body {
   background-color: #3f51b5;
 }
 
-@media (width >= 1025px) {
+@media (width >= 768px) and (width <= 1279px) {
+  .nav__button {
+    display: none;
+  }
+}
+
+@media (width >= 768px) and (width <= 1279px) {
+  .header__open {
+    display: none;
+  }
+}
+@media (width >= 1280px) {
   .header__open {
     display: none;
   }
@@ -228,7 +234,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
-@media (width >= 1025px) {
+@media (width >= 1280px) {
   .fv__inner {
     max-width: 1150px;
     margin-left: auto;
@@ -252,7 +258,7 @@ body {
 .fv__image img {
   width: 398px;
 }
-@media (width >= 1025px) {
+@media (width >= 1280px) {
   .fv__image img {
     width: 650px;
   }
@@ -261,7 +267,7 @@ body {
 .fv__content {
   margin-top: 40px;
 }
-@media (width >= 1025px) {
+@media (width >= 1280px) {
   .fv__content {
     -moz-text-align-last: left;
          text-align-last: left;
@@ -278,7 +284,7 @@ body {
   font-size: 20px;
   font-weight: 700;
 }
-@media (width >= 1025px) {
+@media (width >= 1280px) {
   .fv__title {
     margin-top: 24px;
     font-size: 26px;
