--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .button {
   display: inline-block;
-  padding: 9px 54px;
+  padding: 9px 53px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -16,6 +16,39 @@
   color: #f6f7f7;
   font-weight: 700;
   letter-spacing: 3px;
+}
+
+.inner {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media (width >= 1280px) {
+  .inner {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+
+.heading-1 {
+  color: #238fdc;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  padding-bottom: 8px;
+  position: relative;
+}
+.heading-1::after {
+  position: absolute;
+  content: "";
+  width: 60px;
+  height: 3px;
+  background: #2bc8c8;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 body {
@@ -40,7 +73,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 24px 15px 44px;
+  padding: 24px 15px 0;
 }
 @media (width >= 768px) and (width <= 1279px) {
   .header__inner {
@@ -53,6 +86,7 @@ body {
 }
 @media (width >= 1280px) {
   .header__inner {
+    padding-top: 17px;
     max-width: 1230px;
     margin-left: auto;
     margin-right: auto;
@@ -77,7 +111,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    gap: 169px;
+    gap: 186px;
   }
 }
 
@@ -227,6 +261,7 @@ body {
 ******************************************/
 .fv {
   text-align: center;
+  padding-top: 44px;
   padding-bottom: 80px;
 }
 
@@ -269,6 +304,9 @@ body {
 }
 @media (width >= 1280px) {
   .fv__content {
+    margin-top: 0;
+    padding-left: 2px;
+    padding-top: 6px;
     -moz-text-align-last: left;
          text-align-last: left;
   }
@@ -299,4 +337,106 @@ body {
 
 .fv__button {
   margin-top: 30px;
+}
+
+/*****************************************
+// news
+******************************************/
+.news__inner {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.news__items {
+  margin-top: 46px;
+}
+
+.news__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 3px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: relative;
+}
+.news__item::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background: #e3e3e3;
+}
+.news__item:first-child {
+  padding-bottom: 13px;
+}
+
+.news-link__date {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.news-link__title {
+  color: #111;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1.8;
+}
+
+.news-pagination {
+  margin-top: 46px;
+  text-align: center;
+}
+
+.news-pagination__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+}
+
+.news-pagination__item {
+  width: 36px;
+  height: 36px;
+  border: 1px solid #828282;
+  background: #fff;
+  display: grid;
+  place-items: center;
+}
+.news-pagination__item a {
+  color: #707070;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1;
+  letter-spacing: 1.44px;
+}
+.news-pagination__item:first-child, .news-pagination__item:last-child {
+  border: none;
+}
+
+.news-pagination__button {
+  margin-top: 30px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding: 4px 21px;
+  border-radius: 2px;
+  border: 1px solid #2392db;
+  -webkit-box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+          box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+}
+.news-pagination__button a {
+  color: #2392db;
+  font-weight: 700;
+  letter-spacing: 3px;
 }
