--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,13 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
+@media (width >= 768px) and (width <= 1279px) {
+  .news__inner {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 @media (width >= 1280px) {
   .news__inner {
     max-width: 960px;
@@ -395,6 +402,18 @@ body {
 .news__item:first-child {
   padding-bottom: 13px;
 }
+@media (width >= 768px) and (width <= 1279px) {
+  .news__item {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 30px;
+  }
+}
 @media (width >= 1280px) {
   .news__item {
     -webkit-box-orient: horizontal;
@@ -413,6 +432,14 @@ body {
   font-size: 14px;
   font-weight: 400;
 }
+@media (width >= 768px) and (width <= 1279px) {
+  .news-link__date {
+    font-size: 16px;
+    width: 120px;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
+}
 @media (width >= 1280px) {
   .news-link__date {
     font-size: 16px;
@@ -428,6 +455,11 @@ body {
   font-weight: 400;
   line-height: 1.8;
 }
+@media (width >= 768px) and (width <= 1279px) {
+  .news-link__title {
+    font-size: 16px;
+  }
+}
 @media (width >= 1280px) {
   .news-link__title {
     font-size: 16px;
@@ -437,6 +469,17 @@ body {
 .news-pagination {
   margin-top: 46px;
   text-align: center;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .news-pagination {
+    margin-top: 26px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 @media (width >= 1280px) {
   .news-pagination {
@@ -500,6 +543,11 @@ body {
   color: #2392db;
   font-weight: 700;
   letter-spacing: 3px;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .news-pagination__button {
+    margin-top: 0;
+  }
 }
 @media (width >= 1280px) {
   .news-pagination__button {
