--- a/sass/style.scss
+++ b/sass/style.scss
@@ -344,11 +344,11 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 
-  // @include mq(tb) {
-  //   max-width: calc(930px + 15px * 2);
-  //   margin-left: auto;
-  //   margin-right: auto;
-  // }
+  @include mq(tb) {
+    max-width: calc(930px + 15px * 2);
+    margin-left: auto;
+    margin-right: auto;
+  }
 
   @include mq(pc) {
     max-width: calc(930px + 15px * 2);
@@ -390,11 +390,11 @@ body {
     padding-bottom: 13px;
   }
 
-  // @include mq(tb) {
-  //   flex-direction: row;
-  //   align-items: center;
-  //   gap: 30px;
-  // }
+  @include mq(tb) {
+    flex-direction: row;
+    align-items: center;
+    gap: 30px;
+  }
 
   @include mq(pc) {
     flex-direction: row;
@@ -414,11 +414,11 @@ body {
   font-size: 14px;
   font-weight: 400;
 
-  // @include mq(tb) {
-  //   font-size: 16px;
-  //   width: 119px;
-  //   flex-shrink: 0;
-  // }
+  @include mq(tb) {
+    font-size: 16px;
+    width: 120px;
+    flex-shrink: 0;
+  }
 
   @include mq(pc) {
     font-size: 16px;
@@ -433,9 +433,9 @@ body {
   font-weight: 400;
   line-height: 1.8;
 
-  // @include mq(tb) {
-  //   font-size: 16px;
-  // }
+  @include mq(tb) {
+    font-size: 16px;
+  }
 
   @include mq(pc) {
     font-size: 16px;
@@ -446,11 +446,11 @@ body {
   margin-top: 46px;
   text-align: center;
 
-  // @include mq(tb) {
-  //   margin-top: 26px;
-  //   display: flex;
-  //   justify-content: space-between;
-  // }
+  @include mq(tb) {
+    margin-top: 26px;
+    display: flex;
+    justify-content: space-between;
+  }
 
   @include mq(pc) {
     margin-top: 31px;
@@ -509,9 +509,9 @@ body {
     letter-spacing: 3px;
   }
 
-  // @include mq(tb) {
-  //   margin-top: 0;
-  // }
+  @include mq(tb) {
+    margin-top: 0;
+  }
 
   @include mq(pc) {
     margin-top: 0;
