--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,10 @@ body {
 /*****************************************
 // news
 ******************************************/
+.news {
+  background: #fff;
+}
+
 .news__inner {
   padding-left: 15px;
   padding-right: 15px;
@@ -552,5 +556,131 @@ body {
 @media (width >= 1280px) {
   .news-pagination__button {
     margin-top: 0;
+  }
+}
+
+/*****************************************
+// concept
+******************************************/
+.concept__inner {
+  padding-left: 20px;
+  padding-right: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 30px;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .concept__inner {
+    max-width: 1020px;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 80px;
+  }
+}
+@media (width >= 1280px) {
+  .concept__inner {
+    max-width: 1020px;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 80px;
+  }
+}
+
+.concept__image {
+  text-align: center;
+}
+.concept__image img {
+  width: 310px;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .concept__image img {
+    width: 492px;
+  }
+}
+@media (width >= 1280px) {
+  .concept__image img {
+    width: 492px;
+  }
+}
+
+.concept__contents {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 30px;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .concept__contents {
+    -ms-flex-preferred-size: 60%;
+        flex-basis: 60%;
+  }
+}
+@media (width >= 1280px) {
+  .concept__contents {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+.concept__title {
+  color: #228ddd;
+  font-size: 24px;
+  font-weight: 700;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .concept__title {
+    color: #228ddd;
+    font-size: 26px;
+  }
+}
+@media (width >= 1280px) {
+  .concept__title {
+    color: #228ddd;
+    font-size: 26px;
+  }
+}
+
+.concept__text {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 2;
+}
+
+.concept__button {
+  text-align: center;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .concept__button {
+    margin-top: 5px;
+    text-align: left;
+  }
+}
+@media (width >= 1280px) {
+  .concept__button {
+    margin-top: 5px;
+    text-align: left;
   }
 }
