--- a/css/style.css
+++ b/css/style.css
@@ -718,3 +718,107 @@ body {
 /*****************************************
 // casestudy
 ******************************************/
+.casestudy__inner {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.casestudy-card {
+  margin-top: 50px;
+  border-radius: 4px;
+  -webkit-box-shadow: 5px 7px 34px #F1F1F1;
+          box-shadow: 5px 7px 34px #F1F1F1;
+}
+
+.casestudy-card__img img {
+  width: 320px;
+}
+
+.casestudy-card__body {
+  padding: 14px 10px;
+}
+
+.casestudy-card__title {
+  color: #228ddd;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.casestudy-card__text {
+  margin-top: 10px;
+}
+.casestudy-card__text span {
+  color: #333;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.casestudy-card__tag {
+  margin-top: 10px;
+  display: block;
+  color: #9d9d9d;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.swiper-container {
+  position: relative;
+}
+
+.swiper {
+  position: relative;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 60px;
+}
+
+.swiper-wrapper {
+  position: relative;
+}
+
+.swiper-pagination-bullet {
+  opacity: 1;
+  background: #e1e1e1;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: #2f7dc8;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 0 6px;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  width: 44px;
+  height: 44px;
+}
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: "";
+}
+
+.swiper-button-prev {
+  left: 0;
+  background: url(../img/prev-icon.png) no-repeat center center/contain;
+}
+
+.swiper-button-next {
+  right: 0;
+  background: url(../img/next-icon.png) no-repeat center center/contain;
+}
