--- a/sass/style.scss
+++ b/sass/style.scss
@@ -649,25 +649,135 @@ body {
 }
 
 .casestudy__inner {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .casestudy__title {
 }
 
 .casestudy-card {
+  margin-top: 50px;
+  border-radius: 4px;
+  box-shadow: 5px 7px 34px #F1F1F1;
 }
 
 .casestudy-card__img {
+  img {
+    width: 320px;
+  }
 }
 
 .casestudy-card__body {
+  padding: 14px 10px;
 }
 
 .casestudy-card__title {
+  color: #228ddd;
+  font-size: 15px;
+  font-weight: 700;
 }
 
 .casestudy-card__text {
+  margin-top: 10px;
+
+  span {
+    color: #333;
+    font-size: 12px;
+    font-weight: 700;
+  }
 }
 
 .casestudy-card__tag {
+  margin-top: 10px;
+  display: block;
+  color: #9d9d9d;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+// ============================
+// swiper
+// ============================
+
+.swiper-container {
+  position: relative;
+}
+.swiper {
+  position: relative;
+  padding-left: 8px;
+  padding-right: 8px;
+  // margin-right: -5px;
+  // margin-left: -5px;
+  padding-bottom: 60px;
+}
+.swiper-wrapper {
+  position: relative;
+}
+
+//色と大きさ指定
+.swiper-pagination-bullet {
+  opacity: 1;
+  background: #e1e1e1;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%; //円にする
+}
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: #2f7dc8;
+}
+//paginationの余白指定
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
+  margin: 0 6px;
+}
+//paginationの位置
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+//progressbarの場合
+// .swiper-pagination.swiper-pagination-progressbar.swiper-pagination-horizontal {
+//     top: calc(100% - 10px);
+//     height: 10px;
+//     background: gray;
+// }
+// //実際に変化する棒の色
+// .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
+//     background: red;
+// }
+
+// ==============================
+//     navigation について
+// ==============================
+
+.swiper-button-prev,
+.swiper-button-next {
+  width: 44px;
+  height: 44px;
+  &::after {
+    content: ""; //デフォルトの削除
+  }
+}
+
+.swiper-button-prev {
+  //位置はここで指定
+  // top: 50%;
+  // transform: translateY(-50%);
+  left: 0;
+  background: url(../img/prev-icon.png) no-repeat center center / contain;
+}
+
+.swiper-button-next {
+  //位置はここで指定
+  // top: 50%;
+  // transform: translateY(-50%);
+  right: 0;
+  background: url(../img/next-icon.png) no-repeat center center / contain;
 }
