--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,11 @@
 .heading-2 {
   color: #228ddd;
   font-family: "Montserrat", sans-serif;
+  margin-left: 10px;
 }
 @media (width >= 1280px) {
   .heading-2 {
+    margin-left: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -564,19 +566,17 @@ body {
 
 .news-pagination__button {
   margin-top: 30px;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  padding: 4px 21px;
-  border-radius: 2px;
-  border: 1px solid #2392db;
-  -webkit-box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
-          box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+  display: inline-block;
 }
 .news-pagination__button a {
   color: #2392db;
   font-weight: 700;
   letter-spacing: 3px;
+  padding: 4px 21px;
+  border-radius: 2px;
+  border: 1px solid #2392db;
+  -webkit-box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+          box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
 }
 @media (width >= 768px) and (width <= 1279px) {
   .news-pagination__button {
@@ -718,20 +718,36 @@ body {
 /*****************************************
 // casestudy
 ******************************************/
+@media (width >= 1280px) {
+  .casestudy {
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+}
+
 .casestudy__inner {
   padding-left: 20px;
   padding-right: 20px;
 }
-
-.casestudy-card {
-  margin-top: 50px;
-  border-radius: 4px;
-  -webkit-box-shadow: 5px 7px 34px #F1F1F1;
-          box-shadow: 5px 7px 34px #F1F1F1;
+@media (width >= 1280px) {
+  .casestudy__inner {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
-.casestudy-card__img img {
-  width: 320px;
+.casestudy-card {
+  border-radius: 4px;
+  -webkit-box-shadow: 5px 7px 34px #f1f1f1;
+          box-shadow: 5px 7px 34px #f1f1f1;
+}
+@media (width >= 1280px) {
+  .casestudy-card {
+    width: 320px;
+  }
 }
 
 .casestudy-card__body {
@@ -751,6 +767,12 @@ body {
   color: #333;
   font-size: 12px;
   font-weight: 700;
+  margin-right: 6px;
+}
+@media (width >= 1280px) {
+  .casestudy-card__text {
+    margin-top: 6px;
+  }
 }
 
 .casestudy-card__tag {
@@ -760,20 +782,59 @@ body {
   font-size: 12px;
   font-weight: 400;
 }
+@media (width >= 1280px) {
+  .casestudy-card__tag {
+    margin-top: 6px;
+  }
+}
+
+.casestudy__button {
+  margin-top: 30px;
+  text-align: center;
+}
+.casestudy__button a {
+  display: inline-block;
+  color: #2392db;
+  font-weight: 700;
+  letter-spacing: 3px;
+  padding: 9px 52px;
+  border-radius: 2px;
+  border: 1px solid #2392db;
+  -webkit-box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+          box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+}
+@media (width >= 1280px) {
+  .casestudy__button {
+    margin-top: 16px;
+  }
+}
 
 .swiper-container {
   position: relative;
+  margin-top: 50px;
+}
+@media (width >= 1280px) {
+  .swiper-container {
+    margin-top: 40px;
+  }
 }
 
 .swiper {
   position: relative;
   padding-left: 8px;
   padding-right: 8px;
-  padding-bottom: 60px;
+  padding-bottom: 66px;
+}
+@media (width >= 1280px) {
+  .swiper {
+    padding-left: 62px;
+    padding-right: 62px;
+  }
 }
 
 .swiper-wrapper {
   position: relative;
+  margin-right: 62px;
 }
 
 .swiper-pagination-bullet {
@@ -811,6 +872,12 @@ body {
 .swiper-button-prev::after,
 .swiper-button-next::after {
   content: "";
+}
+@media (width >= 1280px) {
+  .swiper-button-prev,
+  .swiper-button-next {
+    margin-top: -53px;
+  }
 }
 
 .swiper-button-prev {
