--- a/sass/style.scss
+++ b/sass/style.scss
@@ -82,8 +82,10 @@ $width-inner: 1200px;
 .heading-2 {
   color: #228ddd;
   font-family: $font-family-en;
+  margin-left: 10px;
 
   @include mq(pc) {
+    margin-left: 0;
     display: flex;
     align-items: center;
     gap: 30px;
@@ -523,16 +525,16 @@ body {
 
 .news-pagination__button {
   margin-top: 30px;
-  display: inline-flex;
-  padding: 4px 21px;
-  border-radius: 2px;
-  border: 1px solid #2392db;
-  box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+  display: inline-block;
 
   a {
     color: #2392db;
     font-weight: 700;
     letter-spacing: 3px;
+    padding: 4px 21px;
+    border-radius: 2px;
+    border: 1px solid #2392db;
+    box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
   }
 
   @include mq(tb) {
@@ -646,25 +648,42 @@ body {
 // casestudy
 ******************************************/
 .casestudy {
+  @include mq(pc) {
+    padding-left: 80px;
+    padding-right: 80px;
+  }
 }
 
 .casestudy__inner {
   padding-left: 20px;
   padding-right: 20px;
+
+  @include mq(pc) {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .casestudy__title {
 }
 
+.casestudy-slide {
+}
+
 .casestudy-card {
-  margin-top: 50px;
   border-radius: 4px;
-  box-shadow: 5px 7px 34px #F1F1F1;
+  box-shadow: 5px 7px 34px #f1f1f1;
+
+  @include mq(pc) {
+    width: 320px;
+  }
 }
 
 .casestudy-card__img {
   img {
-    width: 320px;
   }
 }
 
@@ -685,6 +704,11 @@ body {
     color: #333;
     font-size: 12px;
     font-weight: 700;
+    margin-right: 6px;
+  }
+
+  @include mq(pc) {
+    margin-top: 6px;
   }
 }
 
@@ -694,6 +718,30 @@ body {
   color: #9d9d9d;
   font-size: 12px;
   font-weight: 400;
+
+  @include mq(pc) {
+    margin-top: 6px;
+  }
+}
+
+.casestudy__button {
+  margin-top: 30px;
+  text-align: center;
+
+  a {
+    display: inline-block;
+    color: #2392db;
+    font-weight: 700;
+    letter-spacing: 3px;
+    padding: 9px 52px;
+    border-radius: 2px;
+    border: 1px solid #2392db;
+    box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+  }
+
+  @include mq(pc) {
+    margin-top: 16px;
+  }
 }
 
 // ============================
@@ -702,17 +750,26 @@ body {
 
 .swiper-container {
   position: relative;
+  margin-top: 50px;
+
+  @include mq(pc) {
+    margin-top: 40px;
+  }
 }
 .swiper {
   position: relative;
   padding-left: 8px;
   padding-right: 8px;
-  // margin-right: -5px;
-  // margin-left: -5px;
-  padding-bottom: 60px;
+  padding-bottom: 66px;
+
+  @include mq(pc) {
+    padding-left: 62px;
+    padding-right: 62px;
+  }
 }
 .swiper-wrapper {
   position: relative;
+  margin-right: 62px;
 }
 
 //色と大きさ指定
@@ -761,23 +818,22 @@ body {
 .swiper-button-next {
   width: 44px;
   height: 44px;
+
   &::after {
     content: ""; //デフォルトの削除
+  }
+
+  @include mq(pc) {
+    margin-top: -53px;
   }
 }
 
 .swiper-button-prev {
-  //位置はここで指定
-  // top: 50%;
-  // transform: translateY(-50%);
   left: 0;
   background: url(../img/prev-icon.png) no-repeat center center / contain;
 }
 
 .swiper-button-next {
-  //位置はここで指定
-  // top: 50%;
-  // transform: translateY(-50%);
   right: 0;
   background: url(../img/next-icon.png) no-repeat center center / contain;
 }
