--- a/css/style.css
+++ b/css/style.css
@@ -94,14 +94,17 @@ body {
   font-size: 16px;
   color: #333;
   line-height: 1.7;
-  background: -webkit-gradient(linear, left top, left bottom, from(#eaf4f7), to(#fff));
-  background: linear-gradient(180deg, #eaf4f7 0%, #fff 100%);
+  background: #f4fbff;
   font-family: "Noto Sans JP", sans-serif;
 }
 
 /*****************************************
 // header
 ******************************************/
+.header {
+  background: #eaf4f7;
+}
+
 .header__inner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -299,6 +302,8 @@ body {
 // fv
 ******************************************/
 .fv {
+  background: -webkit-gradient(linear, left top, left bottom, from(#eaf4f7), to(#fff));
+  background: linear-gradient(180deg, #eaf4f7 0%, #fff 100%);
   text-align: center;
   padding-top: 44px;
   padding-bottom: 80px;
@@ -718,6 +723,9 @@ body {
 /*****************************************
 // casestudy
 ******************************************/
+.casestudy {
+  background: #fff;
+}
 @media (width >= 1280px) {
   .casestudy {
     padding-left: 80px;
@@ -888,4 +896,87 @@ body {
 .swiper-button-next {
   right: 0;
   background: url(../img/next-icon.png) no-repeat center center/contain;
+}
+
+/*****************************************
+// price
+******************************************/
+.price__inner {
+  padding-left: 64px;
+  padding-right: 64px;
+}
+
+.price__card-container {
+  margin-top: 46px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 30px;
+}
+
+.price-card {
+  padding: 30px 20px;
+  max-width: 340px;
+  border-radius: 10px;
+  background: #fff;
+}
+
+.price-card__title {
+  text-align: center;
+}
+
+.price-card__title-main {
+  color: #2392db;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: normal;
+}
+
+.price-card__title-sub {
+  color: #2392db;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 48px;
+  letter-spacing: 3.6px;
+}
+.price-card__title-sub span {
+  color: #333;
+  font-size: 16px;
+}
+
+.price-card__body {
+  margin-top: 36px;
+}
+
+.price-card__table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+.price-card__table tr {
+  border-bottom: 1px solid #c2c2c2;
+}
+.price-card__table .td-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 6px 12px;
+}
+.price-card__table td {
+  color: #333;
+}
+.price-card__table td:nth-child(2) {
+  text-align: right;
+}
+
+.price-card__button {
+  margin-top: 30px;
+  text-align: center;
 }
