--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@
   font-weight: 700;
   letter-spacing: 3px;
 }
+.button--white {
+  color: #fff;
+  border: 1px solid #fff;
+  background: transparent;
+}
 
 .inner {
   padding-top: 60px;
@@ -1216,4 +1221,32 @@ body {
   color: #333;
   font-weight: 400;
   line-height: 1.7;
+}
+
+/*****************************************
+// cta
+******************************************/
+.cta {
+  background: -webkit-gradient(linear, left top, right top, color-stop(1.75%, #2188de), color-stop(97.75%, #2bcbc6));
+  background: linear-gradient(90deg, #2188de 1.75%, #2bcbc6 97.75%);
+}
+
+.cta__inner {
+  color: #fff;
+  text-align: center;
+}
+
+.cta__title {
+  font-size: 26px;
+  font-weight: 700;
+  letter-spacing: 2.6px;
+}
+
+.cta__text {
+  margin-top: 8px;
+  letter-spacing: 1.6px;
+}
+
+.cta__button {
+  margin-top: 17px;
 }
